# zeromqDemo

./: CMakeLists.txt  README.md  xbuild.sh
inc/: demo_comm.h
proj/zeroMQ.si4project/: zeroMQ.sip_sym  zeroMQ.sip_xab  zeroMQ.sip_xad  zeroMQ.sip_xc  zeroMQ.sip_xf  zeroMQ.sip_xm  zeroMQ.sip_xr  zeroMQ.sip_xsb  zeroMQ.sip_xsd  zeroMQ.siproj
proj/zeroMQ.si4project/cache/parse/: inc_czmq_czmq.h.sisc  inc_czmq_czmq_library.h.sisc  inc_czmq_czmq_prelude.h.sisc  inc_czmq_zactor.h.sisc  inc_czmq_zarmour.h.sisc  inc_czmq_zauth.h.sisc  inc_czmq_zbeacon.h.sisc  inc_czmq_zcert.h.sisc  inc_czmq_zcertstore.h.sisc  inc_czmq_zchunk.h.sisc  inc_czmq_zclock.h.sisc  inc_czmq_zconfig.h.sisc  inc_czmq_zdigest.h.sisc  inc_czmq_zdir.h.sisc  inc_czmq_zdir_patch.h.sisc  inc_czmq_zfile.h.sisc  inc_czmq_zframe.h.sisc  inc_czmq_zgossip.h.sisc  inc_czmq_zhash.h.sisc  inc_czmq_zhashx.h.sisc  inc_czmq_ziflist.h.sisc  inc_czmq_zlist.h.sisc  inc_czmq_zlistx.h.sisc  inc_czmq_zloop.h.sisc  inc_czmq_zmonitor.h.sisc  inc_czmq_zmsg.h.sisc  inc_czmq_zpoller.h.sisc  inc_czmq_zproxy.h.sisc  inc_czmq_zrex.h.sisc  inc_czmq_zsock.h.sisc  inc_czmq_zstr.h.sisc  inc_czmq_zsys.h.sisc  inc_czmq_zuuid.h.sisc  inc_libzmq_zmq.h.sisc  (+3 more)
src/: CMakeLists.txt
src/cache/envelope/: enevlope.c
src/cache/pub_sub/: server.c
src/cache/req_rep/: rep_client.c  req_server.c
src/client/: CMakeLists.txt  client.c
src/daemon/: CMakeLists.txt  demo.c  test.c
src/server/: CMakeLists.txt  server.c
symbol/: clientMQ.sym  serverMQ.sym
utils/czmq/: libczmq.so.4  libczmq.so.4.2.0
utils/libzmq/: libzmq.so.5.2.3
