
# 设置可执行文件名
SET(EXECUTABLE_FILE_NAME daemonMQ)
MESSAGE(STATUS "===> Build ${EXECUTABLE_FILE_NAME}, ${PROJECT_SOURCE_DIR}")

# 定义头文件路径
set(INCLUDE_PATH ${PROJECT_SOURCE_DIR}/inc/libzmq ${PROJECT_SOURCE_DIR}/inc)
MESSAGE(STATUS "Include Path, ${INCLUDE_PATH}")

set(LIB_PATH ${PROJECT_SOURCE_DIR}/utils/libzmq)
MESSAGE(STATUS "Lib Path, ${LIB_PATH}")

SET(SOURCE_PATH ${PROJECT_SOURCE_DIR}/src/daemon)
MESSAGE(STATUS "Source Path, ${SOURCE_PATH}")

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
MESSAGE(STATUS "EXEC Output Path, ${EXECUTABLE_OUTPUT_PATH}")

INCLUDE_DIRECTORIES(${INCLUDE_PATH})
LINK_DIRECTORIES(${LIB_PATH})

SET(LIB_LIST libzmq.so -lpthread)
AUX_SOURCE_DIRECTORY(${SOURCE_PATH} SRC_LIST)
MESSAGE(STATUS "Src List, ${SRC_LIST}")


ADD_EXECUTABLE(${EXECUTABLE_FILE_NAME} ${SRC_LIST})
TARGET_LINK_LIBRARIES(${EXECUTABLE_FILE_NAME} ${LIB_LIST})
